k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  progressDeadlineSeconds: 30
  selector:
    matchLabels:
      app: geter
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: geter
        tier: frontend
        track: stable
    spec:
      containers:
        - name: geter
          image: grigorytitov/k8s_test_frontend:v1
          ports:
            - name: http
              containerPort: 3000
