k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: geter
    tier: backend
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
  type: LoadBalancer
